Fixes scroll bug on mobile on Android scroll + border radius was a problem

--- a/src/sass/blog/atom-light.scss
+++ b/src/sass/blog/atom-light.scss
@@ -5,10 +5,12 @@
 }
 .editor,
 .editor .gutter {
-  border-radius: 4px;
+  //border-radius: 4px;
   @include dm_box__shadow;
   background-color: #E3F2FD;
   color: #555555;
+  display: block;
+  max-height: 300px;
   overflow: auto;
 }
 .editor .invisible-character {
