--- a/src/sass/blog/blog.scss
+++ b/src/sass/blog/blog.scss
@@ -3,10 +3,33 @@
 
 article {
   padding: 1em;
+  @media (max-width: $max_width_mobile) {
+    padding: 1em 0em;
+  }
 }
 
 devmind-article {
   @include dm_container_closest();
+}
+
+.dm-blog--info-title{
+  @media (max-width: $max_width_mobile) {
+    margin: 0px 4px;
+  }
+}
+
+.dm-blog--info-date {
+  @media (max-width: $max_width_mobile) {
+    margin-right: 1em;
+    margin-left: 1em;
+    margin-top: 1em;
+  }
+}
+
+.blog-keywords {
+  @media (max-width: $max_width_mobile) {
+    margin: 0em 1em;
+  }
 }
 
 .imageblock, .videoblock{
